vlib/v/checker/tests/trailing_comma_struct_attr.vv
struct User {
    name string
    jobs []string [json:jobss;]
}